--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nx/cypress": "19.8.0",
     "@nx/devkit": "19.8.0",
@@ -19,10 +21,18 @@
     "@nx/js": "19.8.0",
     "@nx/playwright": "19.8.0",
     "@nx/react": "19.8.0",
+    "@nx/storybook": "^19.8.0",
     "@nx/vite": "19.8.0",
     "@nx/web": "19.8.0",
     "@nx/workspace": "19.8.0",
     "@playwright/test": "^1.36.0",
+    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/addon-interactions": "^8.2.8",
+    "@storybook/core-server": "^8.2.8",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react-vite": "^8.2.8",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -33,6 +43,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
@@ -48,6 +59,7 @@
     "nx": "19.8.0",
     "prettier": "^2.6.2",
     "sass": "^1.55.0",
+    "storybook": "^8.2.8",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
