--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@pomidaro-services/uikit-web": ["libs/uikit-web/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
