--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "@react-hook/media-query": "^1.1.1",
     "classnames": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
