--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
+    "vite-plugin-svgr": "^4.2.0",
     "vitest": "^1.3.1"
   }
 }
