refactor(*): add ts aliases to libs/uikit-web

--- a/libs/uikit-web/tsconfig.json
+++ b/libs/uikit-web/tsconfig.json
@@ -4,7 +4,11 @@
     "allowJs": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@shared/*": ["libs/uikit-web/src/lib/shared/*"],
+      "@components/*": ["libs/uikit-web/src/lib/components/*"],
+    }
   },
   "files": [],
   "include": [],
